# hap-flow

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
src/hap_flow/: __init__.py
workflows/: fail.sh  single_file.sh  xonsh.xsh
workflows/multi-step/: 0-sleep.sh  1-info.sh  2-df.sh
workflows/multi_step/: 0-date.sh  0-sleep.sh  2-df.sh
